--- a/src/Styles/css-stlye.css
+++ b/src/Styles/css-stlye.css
@@ -18,6 +18,14 @@
   max-width: 100% !important;
 }
 
+.bx-no-pd{  
+  box-sizing: border-box;
+  width: 100% !important;
+  max-width: 100% !important;
+  padding: 0px !important;
+  margin: 0px !important;
+}
+
 .red{
   color: red;
 }
@@ -73,19 +81,30 @@ textarea:focus{
 button{
   border: none;
   max-width: 200px;
-  width: 65%;
   background: linear-gradient(to right, rgba(40,55,200, 0.9), rgba(40,65,200, 0.9), rgba(40,85,200, 0.9)),
   linear-gradient(to left, rgba(36, 22, 235, 0.9), rgba(40, 30, 175, 0.9));
-  ;
+}
+
+.f-btn{
+  width: 65% !important;
 }
 .no-dec{
   text-decoration: none !important;
 }
+.m-btn{
+  border: none;
+  padding: 5px 20px !important;
+  color: white;
+  background: linear-gradient(to right, rgba(40,55,200, 0.9), rgba(40,65,200, 0.9), rgba(40,85,200, 0.9)),
+  linear-gradient(to left, rgba(36, 22, 235, 0.9), rgba(40, 30, 175, 0.9)); 
+}
 
 .nav{
   height: 60px;
-  width: 100%;
   display: block;
+  width: 100%;
+  position: fixed;
+  top: 0;
   margin: 0px;
   font-size: larger;
   font-weight: 700;
@@ -98,14 +117,34 @@ button{
   linear-gradient(to left, rgba(36, 22, 235, 0.9), rgba(40, 30, 175, 0.9));
   ;
 }
+.right{
+  text-align: right !important;
+}
+.left{
+  text-align: left !important;
+}
 
-/* .form-ground{
+.th-c{
+  color: rgba(40,55,200, 0.9);
+}
+table{
+  border-collapse: collapse;
+}
+
+td, th {
+  box-sizing: border-box;
+  border-top: 1px solid #dddddd;
+  padding: 8px 0px 8px 2px;
+}
+
+tr{
   width: 100%;
-  max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
-  background-image:  linear-gradient(180deg, rgba(23,103,245, 0.7) 30%, rgba(34,145,227, 0)),
-    linear-gradient(120deg, rgba(41,143,220, 0.8), rgba(34,175,240, 0.8) 40%),
-    linear-gradient(230deg, rgba(25, 100, 240, 0.9) 35%, rgba(255,255,255,0) 30%),
-    linear-gradient(-35deg, rgba(25, 90, 220, 0.5) 40%, rgba(255,255,255,0) 31%);		
-} */
+}
+tr:nth-child(odd) {
+  background-color: #f3f2f2;
+}
+tr:hover{
+  background: #f1efef;
+}
+
+
