--- a/src/Styles/css-stlye.css
+++ b/src/Styles/css-stlye.css
@@ -51,6 +51,11 @@
   justify-content: center;
 }
 
+.flez-btw-mid{
+  display: flex;
+  align-items: flex-end;
+}
+
 .label{
   font-size: large;
   font-weight: 600;
